--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           <img src="hyggelogo.jpg" alt="hygge logo" width="250px" height="250px">
         </a>
       </div>
+      <div class="showcase-video">
+        <iframe width="450" height="250" src="https://www.youtube.com/embed/EJVbsCfLy-8" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
-  </section>
-</body>
+  </section>  
 </html>
